--- a/WebApplication9/Web.config
+++ b/WebApplication9/Web.config
@@ -15,11 +15,26 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
+
+    <authentication mode="Forms">
+      <forms name="Auth" timeout="2880" loginUrl="~/Account/Login" />
+    </authentication>
+
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    
+    
+    <roleManager enabled="true" defaultProvider="DefaultRoleProvider">
+      <providers>
+        <!--connectionStringName="DefaultConnection" applicationName="/"-->
+        <add name="DefaultRoleProvider" type="Cemetery.Providers.CustomRoleProvider" />
+      </providers>
+    </roleManager>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
